# create-mnist-with-burn

./: .gitignore  Cargo.toml  README.md
artifact/: config.json
doc/: data.md  model.md  train.md
src/: data.rs  main.rs  model.rs  train.rs
